# Auron

./: .gitignore  AURON_CODEBASE_REPORT.md  Anchor.toml  OFFRAMP.md  README.md  deploy.sh  package-lock.json  package.json  skills-lock.json  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml  codeql.yml
apps/docs/: package-lock.json  package.json  tailwind.config.ts
apps/web/: .eslintrc.json  AGENTS.md  RAZORPAY_SETUP.md  README.md  capacitor.config.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
contracts/: Cargo.toml
contracts/agreement/: Cargo.toml
contracts/agreement/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/ownership/: Cargo.toml
contracts/timelock/: Cargo.toml
contracts/transfer/: Cargo.toml
docs/grant/: superteam-moonshot-application.md
frontend/: .env.example  .gitignore  AGENTS.md  PRODUCTION_CHECKLIST.md  README.md  YIELD_IMPLEMENTATION_COMPLETE.md  YIELD_INTEGRATION_PLAN.md  capacitor.config.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/components/: ChatInterface.tsx  ConfirmCard.tsx  ConnectWalletButton.tsx  MerchantQRModal.tsx  OnboardingFlow.tsx  PaymentIntentScreen.tsx  (+7 more)
programs/savings-vault/: Cargo.toml
programs/savings-vault/src/: lib.rs
scripts/: .env.deploy  build_contracts.sh  deploy.js  package-lock.json  package.json
supabase/: schema.sql
tests/: savings-vault.ts
(+226 files in other folders)
