[package]
name = "savings-vault"
version = "0.1.0"
description = "Auron savings vault — time-locked USDC on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "savings_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
